começo dos ajustes

--- a/MeuTrabalho/appsettings.json
+++ b/MeuTrabalho/appsettings.json
@@ -4,7 +4,7 @@
     "pwd": "homework"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=saturnodb;Database=TRAB01;User=adm;Password=homework"
+    "DefaultConnection": "Server=localhost;Database=MEUDB;Integrated Security=SSPI;"
   },
   "Logging": {
     "IncludeScopes": false,
